--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 		    <version>2.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.springframework.session</groupId>
+		    <artifactId>spring-session-data-mongodb</artifactId>
+		    <version>2.2.2.RELEASE</version>
+		</dependency>
+		<dependency>
 		    <groupId>nz.net.ultraq.thymeleaf</groupId>
 		    <artifactId>thymeleaf-layout-dialect</artifactId>
 		    <version>2.4.1</version>
