--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,13 @@
 		    <artifactId>thymeleaf-layout-dialect</artifactId>
 		    <version>2.4.1</version>
 		</dependency>
+		<dependency>
+		  <groupId>com.algolia</groupId>
+		  <artifactId>algoliasearch-core</artifactId>
+		  <version>3.6.1</version>
+		</dependency>
 
+	    
 	    
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
