Created Admin dropdown with admin authorization using thymeleaf spring security  at the navbar

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
 		    <artifactId>relmongo</artifactId>
 		    <version>3.3.1</version>
 		 </dependency>
+		 
+		 <dependency>
+		    <groupId>org.thymeleaf.extras</groupId>
+		    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
 
 		
 			    
